--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,4 @@
 
 @import "./Style/Layout/header/header.scss";
 @import "./Style/Layout/Carousel/carousel.scss";
+@import "./Style/Layout/DanhSachPhim/DanhSachPhim.scss";
