--- a/src/Style/Layout/DanhSachPhim/DanhSachPhim.scss
+++ b/src/Style/Layout/DanhSachPhim/DanhSachPhim.scss
@@ -2,4 +2,34 @@
   h1 {
     @include Text($cRed, $h5, $semiBold);
   }
+  .card {
+    position: relative;
+
+    .iconHover {
+      position: absolute;
+      transform: translate(175%, 300%);
+      opacity: 0;
+      transition: all 0.2s;
+    }
+    .card-body {
+      .card__info {
+        position: relative;
+      }
+      .showHover {
+        position: absolute;
+        transform: translate(10%, -130%);
+        opacity: 0;
+        button {
+          padding: 10px 60px;
+        }
+      }
+      &:hover .showHover {
+        opacity: 1;
+      }
+    }
+
+    &:hover .iconHover {
+      opacity: 1;
+    }
+  }
 }
