--- a/src/Style/Layout/DanhSachPhim/DanhSachPhim.scss
+++ b/src/Style/Layout/DanhSachPhim/DanhSachPhim.scss
@@ -1,12 +1,50 @@
 .silder {
   h1 {
-    @include Text($cRed, $h5, $semiBold);
+    @include Text($cRed, $h2, $semiBold);
   }
   .card {
     border: none;
     position: relative;
+
     img {
       border-radius: 4px;
+    }
+    .silder__img {
+      position: relative;
+      .img__overlay::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: linear-gradient(transparent, #000000);
+        opacity: 0;
+        transition: all 0.3s;
+      }
+      .point {
+        position: absolute;
+
+        top: 12px;
+        right: 12px;
+        font-size: 16px;
+        background-color: rgba(12, 27, 54, 0.8);
+        border: 1px solid #1f2e46;
+        border-radius: 4px;
+        color: #fff;
+        .svg-inline--fa {
+          color: $cRed;
+        }
+      }
+    }
+    &:hover .img__overlay::before {
+      opacity: 1;
+    }
+    a {
+      color: white;
+      &:hover {
+        color: white;
+      }
     }
     .iconHover {
       position: absolute;
@@ -15,7 +53,7 @@
       transition: all 0.3s;
       width: 60px;
       height: 60px;
-      border: 2px solid white;
+      border: 1px solid white;
       border-radius: 50%;
       line-height: 65px;
       .svg-inline--fa {
@@ -23,17 +61,27 @@
       }
     }
     .card-body {
+      height: 97px;
       .card__info {
         position: relative;
       }
 
       .showHover {
         position: absolute;
-        transform: translate(3%, -110%);
+        transform: translate(3%, -130%);
         opacity: 0;
         transition: all 0.3s;
+        bottom: -20px;
+
         a {
           padding: 10px 70px;
+          background-color: $secondary;
+          border-radius: 4px;
+          display: block;
+          &:hover {
+            color: $cRed;
+            color: $primary;
+          }
         }
       }
     }
