--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 @import "./Style/Hepers/variable.scss";
 @import "./Style/Hepers/mixin.scss";
 @import "./Style/Hepers/extend.scss";
-
+@import "./Style/lity.scss";
 @import "./Style/Layout/header/header.scss";
 @import "./Style/Layout/Carousel/carousel.scss";
 @import "./Style/Layout/DanhSachPhim/DanhSachPhim.scss";
