--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,4 @@
 @import "./Style/Layout/header/header.scss";
 @import "./Style/Layout/Carousel/carousel.scss";
 @import "./Style/Layout/DanhSachPhim/DanhSachPhim.scss";
+@import "./Style/Layout/HeThongRapChieu/heThongRapChieu.scss";
