--- a/src/Style/Layout/HeThongRapChieu/heThongRapChieu.scss
+++ b/src/Style/Layout/HeThongRapChieu/heThongRapChieu.scss
@@ -4,26 +4,125 @@
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     padding: 0px;
+    .nav-pills .nav-link.active,
+    .nav-pills .show > .nav-link {
+      color: black;
+      opacity: 1;
+      background-color: transparent;
+    }
     .nav {
       a {
         padding: 20px;
-
+        opacity: 0.5;
         transition: all 0.2s;
+        position: relative;
+        transition: all 0.2s;
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          width: calc(100% - 40px);
+          transform: translateX(-50%);
+          border-bottom: 1px solid #fff;
+          border-color: rgba(238, 238, 238, 0.88);
+        }
+        &:hover {
+          opacity: 1;
+        }
       }
     }
   }
 
-  .nav-pills .nav-link.active,
-  .nav-pills .show > .nav-link {
-    color: black;
-    // background-color: $primary;
-  }
   .col-11 {
     .tab-content {
-      .col-4 {
-        .react-scroll-to-bottom--css-vwizf-79elbk {
-          .react-scroll-to-bottom--css-awjxu-1n7m0yu {
-            height: 650px;
+      .tab-pane {
+        .row {
+          .col-5 {
+            min-height: 550px;
+            border-top: 1px solid #ebebec;
+            border-bottom: 1px solid #ebebec;
+            .nav-pills .nav-link.active,
+            .nav-pills .show > .nav-link {
+              background-color: transparent;
+              opacity: 1;
+            }
+            .nav {
+              a {
+                color: $footer;
+                opacity: 0.5;
+                position: relative;
+                transition: all 0.2s;
+                padding: 20px;
+                &::after {
+                  content: "";
+                  position: absolute;
+                  bottom: 0;
+                  left: 50%;
+                  width: calc(100% - 40px);
+                  transform: translateX(-50%);
+                  border-bottom: 1px solid #fff;
+                  border-color: rgba(238, 238, 238, 0.88);
+                }
+              }
+              .nav-link {
+                h5 {
+                  @include Text($cRed, $h6 - 2, $medium);
+                }
+                span {
+                  @include Text($cFooter, $h6 - 5, $medium);
+                }
+              }
+              .nav-link:focus,
+              .nav-link:hover {
+                opacity: 1;
+                background-color: transparent;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .col-7 {
+    border: 1px solid #ebebec;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    .tab-content {
+      .tab-pane {
+        .time__film {
+          padding-bottom: 17px;
+          padding-top: 25px;
+          padding-right: 15px;
+          padding-left: 20px;
+          width: 100%;
+          position: relative;
+          margin-bottom: 0;
+          &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            width: calc(100% - 40px);
+            transform: translateX(-50%);
+            border-bottom: 1px solid #ccc;
+            border-color: rgba(238, 238, 238, 0.88);
+          }
+          h5 {
+            @include Text($cSecondary, $h6 - 2, $medium);
+          }
+          .row {
+            a {
+              padding: 5px 0;
+              transition: all 0.2s;
+              text-decoration: none;
+              display: block;
+              text-align: center;
+              background-color: rgba(246, 246, 246, 0.5);
+              border-radius: 7px;
+              color: #9b9b9b;
+              border: 1px solid #e4e4e4;
+            }
           }
         }
       }
