--- a/src/App.scss
+++ b/src/App.scss
@@ -8,3 +8,5 @@
 @import "./Style/Layout/Carousel/carousel.scss";
 @import "./Style/Layout/DanhSachPhim/DanhSachPhim.scss";
 @import "./Style/Layout/HeThongRapChieu/heThongRapChieu.scss";
+@import "./Style/Layout/Detail/Detail.scss";
+@import "./Style/Layout/Footer/Footer.scss";
