--- a/src/Style/Layout/HeThongRapChieu/heThongRapChieu.scss
+++ b/src/Style/Layout/HeThongRapChieu/heThongRapChieu.scss
@@ -47,6 +47,9 @@
               background-color: transparent;
               opacity: 1;
             }
+            // .croll__rap {
+            //   height: 500px;
+            // }
             .nav {
               a {
                 color: $footer;
