--- a/src/Style/Layout/Detail/Detail.scss
+++ b/src/Style/Layout/Detail/Detail.scss
@@ -1,4 +1,7 @@
 .detail {
+  p {
+    margin-bottom: 0px;
+  }
   .background_main {
     position: relative;
     .style__blur {
@@ -7,104 +10,179 @@
       left: 0;
       width: 100%;
       overflow: hidden;
-      height: 100vh;
+      height: 80vh;
       img {
         filter: blur(15px);
         margin: -11px 0 -5px -10px;
         width: calc(100% + 5px);
       }
     }
+    .style__gradient {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: linear-gradient(to top, rgb(10, 32, 41), transparent 100%);
+    }
+
     .detail__content {
       position: absolute;
       top: 50%;
       width: 100%;
       left: 50%;
       transform: translate3d(-50%, -50%, 0);
+      .img__film {
+        width: 240px;
+        img {
+          border-radius: 5px;
+        }
+        a {
+          color: $primary;
+        }
+        .iconHover {
+          position: absolute;
+          transform: translate(-245%, 220%);
+          opacity: 0;
+          transition: all 0.3s;
+          width: 60px;
+          height: 60px;
+          border: 1px solid $primary;
+          border-radius: 50%;
+          line-height: 70px;
+          text-align: center;
+          .svg-inline--fa {
+            margin-left: 8px;
+          }
+        }
+        &:hover .iconHover {
+          opacity: 1;
+        }
+      }
+      .detail__info {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 45%;
+        .mr-1 {
+          color: $cRed;
+        }
+        .content__c16 {
+          margin-right: 6px;
+          background-color: $cRed;
+          color: $primary;
+          font-size: $subtitle2;
+          border-radius: 4px;
+          padding: 0 5px;
+          display: inline-block;
+          text-align: center;
+        }
+        h1 {
+          @include Text($primary, $h4, $bold);
+          padding-top: 5px;
+        }
+        p {
+          color: $primary;
+        }
+        button {
+          font-size: $subtitle2;
+          border-radius: 4px;
+          text-align: center;
+          background: 0 0;
+          padding: 7px 25px;
+          transition: all 0.2s;
+          margin-top: 25px;
+          margin-bottom: 20px;
+          background-color: $cRed;
+          border: none;
+          color: #fff;
+          &:hover {
+            background-color: #b42a14;
+          }
+        }
+      }
     }
   }
-  // .bgr__main {
-  //   position: relative;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   overflow: hidden;
-  //   .detail__bgr {
-  //     position: absolute;
-  //     filter: blur(15px);
-  //     margin: -11px 0 -5px -10px;
-  //     width: calc(100% + 5px);
+  .lich__chieu {
+    background-color: rgb(10, 32, 41);
+    h1 {
+      @include Text($primary, $h5, $medium);
+      line-height: 24px;
+      height: 24px;
+      transition: all 0.2s;
+      &:hover {
+        font-size: $h4 + 1;
+        color: $cRed;
+      }
+    }
+    .lichChieu__bg {
+      background-color: $primary;
+      border-radius: 5px;
 
-  //     img {
-  //       width: 100%;
-  //     }
-  //   }
-  // }
+      .nav-pills .nav-link.active,
+      .nav-pills .show > .nav-link {
+        color: $cPrimary;
+        opacity: 1;
+        background-color: transparent;
+      }
+      .detail__logo {
+        a {
+          padding: 20px;
+          position: relative;
+          opacity: 0.5;
+          transition: all 0.2s;
+          color: $cPrimary;
+          position: relative;
+          &:hover {
+            opacity: 1;
+          }
+          &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            width: calc(100% - 40px);
+            transform: translateX(-50%);
+            border-bottom: 1px solid #ccc;
+            border-color: rgba(238, 238, 238, 0.88);
+          }
+        }
+      }
+      .rap__info {
+        border: 1px solid $hrPrimary;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+        background-color: $primary;
 
-  // p {
-  //   margin-bottom: 0px;
-  // }
-  // .img__film {
-  //   position: relative;
-  //   text-align: center;
-  //   width: 240px;
-  //   &:hover .iconHover {
-  //     opacity: 1;
-  //   }
-  //   a {
-  //     color: $primary;
-  //   }
-  //   .iconHover {
-  //     position: absolute;
-  //     transform: translate(-245%, 220%);
-  //     opacity: 0;
-  //     transition: all 0.3s;
-  //     width: 60px;
-  //     height: 60px;
-  //     border: 1px solid white;
-  //     border-radius: 50%;
-  //     line-height: 70px;
-  //     .svg-inline--fa {
-  //       margin-left: 8px;
-  //     }
-  //   }
-  // }
-  // .detail__content {
-  //   position: absolute;
-  //   top: 50%;
-  //   transform: translateY(-50%);
-  //   left: 38%;
-  //   .content__c16 {
-  //     margin-right: 6px;
-  //     background-color: $cRed;
-  //     color: $primary;
-  //     font-size: $subtitle2;
-  //     border-radius: 4px;
-  //     padding: 0 5px;
-  //     display: inline-block;
-  //     text-align: center;
-  //   }
-  //   h1 {
-  //     @include Text($primary, $h5, $bold);
-  //     padding-top: 5px;
-  //   }
-  //   p {
-  //     color: $primary;
-  //   }
-  //   button {
-  //     font-size: 16px;
-  //     border-radius: 4px;
-  //     text-align: center;
-  //     background: 0 0;
-  //     padding: 7px 25px;
-  //     transition: all 0.2s;
-  //     margin-top: 25px;
-  //     margin-bottom: 20px;
-  //     background-color: #fb4226;
-  //     border: none;
-  //     color: #fff;
-  //     &:hover {
-  //       background-color: #b42a14;
-  //     }
-  //   }
-  // }
+        a {
+          color: $cSecondary;
+        }
+        .tab-content {
+          position: relative;
+        }
+        .rap__hr {
+          padding-bottom: 17px;
+          padding-top: 25px;
+          padding-right: 15px;
+          padding-left: 20px;
+          width: 100%;
+          position: relative;
+          margin-bottom: 0;
+          h2 {
+            @include Text($cRed, $h6, $semiBold);
+          }
+          &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            width: calc(100% - 40px);
+            transform: translateX(-50%);
+            border-bottom: 1px solid #ccc;
+            border-color: rgba(238, 238, 238, 0.88);
+          }
+        }
+      }
+    }
+  }
 }
