--- a/src/Style/Layout/Detail/Detail.scss
+++ b/src/Style/Layout/Detail/Detail.scss
@@ -160,7 +160,7 @@
         .tab-content {
           position: relative;
         }
-        .rap__hr {
+        .cum__Rap {
           padding-bottom: 17px;
           padding-top: 25px;
           padding-right: 15px;
@@ -169,17 +169,34 @@
           position: relative;
           margin-bottom: 0;
           h2 {
-            @include Text($cRed, $h6, $semiBold);
+            @include Text($cRed, $h6, $medium);
           }
-          &::after {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            width: calc(100% - 40px);
-            transform: translateX(-50%);
-            border-bottom: 1px solid #ccc;
-            border-color: rgba(238, 238, 238, 0.88);
+          .rap__hr {
+            position: relative;
+            &::after {
+              content: "";
+              position: absolute;
+              bottom: 0;
+              left: 50%;
+              width: calc(100% - 40px);
+              transform: translateX(-50%);
+              border-bottom: 1px solid #ccc;
+              border-color: rgba(238, 238, 238, 0.88);
+            }
+          }
+
+          .ngay__Chieu {
+            padding: 5px 0;
+            transition: all 0.2s;
+            text-decoration: none;
+            display: block;
+            text-align: center;
+            background-color: rgba(246, 246, 246, 0.5);
+            border-radius: 7px;
+            color: #108f3e;
+            border: 1px solid #e4e4e4;
+            max-width: 100px;
+            margin: 5px;
           }
         }
       }
