--- a/src/Style/Layout/Detail/Detail.scss
+++ b/src/Style/Layout/Detail/Detail.scss
@@ -173,6 +173,11 @@
           }
           .rap__hr {
             position: relative;
+            padding-bottom: 17px;
+
+            width: 100%;
+
+            margin-bottom: 0;
             &::after {
               content: "";
               position: absolute;
@@ -197,6 +202,9 @@
             border: 1px solid #e4e4e4;
             max-width: 100px;
             margin: 5px;
+            &:hover {
+              color: $cRed;
+            }
           }
         }
       }
