--- a/src/Style/Hepers/variable.scss
+++ b/src/Style/Hepers/variable.scss
@@ -1,10 +1,14 @@
 // BACKGROUND COLOR
 $primary: #ffff;
 $secondary: #fb4226;
+$boderBot: #e9e9e9;
 $green: #00ac4d;
 $footer: #222;
 $hrPrimary: #ebebec;
-
+$ghe: #3e515d;
+$gheDangDat: #44c020;
+$gheDaDat: #e7eaec;
+$gheVip: #b03550;
 // TeXt color
 $cPrimary: #000;
 $cSecondary: #108f3e;
