--- a/src/Style/Layout/Checkout/checkout.scss
+++ b/src/Style/Layout/Checkout/checkout.scss
@@ -1,19 +1,84 @@
 .checkout {
   .step__checkout {
     position: fixed;
-    background-color: #fff;
+    background-color: $primary;
     box-shadow: 0 0 15px rgb(0 0 0 / 30%);
     z-index: 3;
     top: -1px;
     left: 0;
-    width: 65%;
+    width: 90%;
     height: 80px;
   }
   .seat__checkout {
-    margin-left: 10%;
     margin-top: 80px;
-    float: left;
+    text-align: center;
     padding-top: 30px;
-    width: 69.7%;
+  }
+  .list__seat {
+    text-align: center;
+    button {
+      border: none;
+      &:focus {
+        // border-color: $cRed;
+      }
+    }
+    .ghe {
+      height: 30px;
+      width: 30px;
+      margin: 5px;
+      background-color: $ghe;
+      border-radius: 5px;
+    }
+    .gheDaDat {
+      background-color: $gheDaDat !important;
+
+      cursor: no-drop;
+    }
+    .gheVip {
+      background-color: $gheVip;
+    }
+    .gheDangDat {
+      background-color: $gheDangDat !important;
+    }
+  }
+  .right__checkout {
+    position: fixed;
+
+    top: 0;
+    background-color: $primary;
+    box-shadow: 0 0 15px rgb(0 0 0 / 30%);
+    z-index: 3;
+    width: 32.4%;
+    height: 100%;
+    padding-left: 40px;
+    padding-right: 40px;
+    .total {
+      border-bottom: 1px dashed $boderBot;
+      height: 80px;
+      margin: 15px 0;
+      text-align: center;
+      font-size: $h2 + 4;
+      color: #44c020 !important;
+    }
+    .checkout__info {
+      border-bottom: 1px dashed $boderBot;
+      padding-bottom: 12.5px;
+      font-size: 16px;
+    }
+    .chair {
+      border-bottom: 1px dashed $boderBot;
+      //   padding-bottom: 12.5px;
+      padding-top: 12.5px;
+      margin-bottom: 12.5px;
+    }
+    .buy__ticket {
+      padding-top: 15px;
+      height: 60px;
+      cursor: pointer;
+      font-size: $h5;
+      text-align: center;
+      color: $boderBot !important;
+      background-image: linear-gradient(223deg, #b4ec51 0, #429321 100%);
+    }
   }
 }
