--- a/src/Style/Hepers/mixin.scss
+++ b/src/Style/Hepers/mixin.scss
@@ -17,3 +17,25 @@
   width: $width;
   height: $height;
 }
+@mixin MediaQuery($type) {
+  if $type == $xs {
+    @media screen and (max-width: $xs) {
+      @content;
+    }
+  }
+  else if $type == $sm {
+    @media screen and (max-width: $sm) {
+      @content;
+    }
+  }
+  else if $type == $md {
+    @media screen and (max-width: $md) {
+      @content;
+    }
+  }
+  else {
+    @media screen and (max-width: $lg) {
+      @content;
+    }
+  }
+}
