--- a/src/Style/Hepers/mixin.scss
+++ b/src/Style/Hepers/mixin.scss
@@ -17,23 +17,24 @@
   width: $width;
   height: $height;
 }
+$xs: 576px;
+$sm: 768px;
+$md: 992px;
+$lg: 1200px;
 @mixin MediaQuery($type) {
-  if $type == $xs {
+  @if $type == $xs {
     @media screen and (max-width: $xs) {
       @content;
     }
-  }
-  else if $type == $sm {
+  } @else if $type == $sm {
     @media screen and (max-width: $sm) {
       @content;
     }
-  }
-  else if $type == $md {
+  } @else if $type == $md {
     @media screen and (max-width: $md) {
       @content;
     }
-  }
-  else {
+  } @else {
     @media screen and (max-width: $lg) {
       @content;
     }
