--- a/src/App.scss
+++ b/src/App.scss
@@ -10,4 +10,6 @@
 @import "./Style/Layout/HeThongRapChieu/heThongRapChieu.scss";
 @import "./Style/Layout/Detail/Detail.scss";
 @import "./Style/Layout/Checkout/checkout.scss";
+@import "./Style/Layout/Login/login.scss";
+
 @import "./Style/Layout/Footer/Footer.scss";
