--- a/src/Style/Layout/header/header.scss
+++ b/src/Style/Layout/header/header.scss
@@ -25,12 +25,12 @@ header {
         font-size: $body1;
 
         .btn__Logout {
-          width: 120px;
+          width: 80px;
           text-align: center;
           background-color: #959595;
           border-radius: 4px;
-          color: #fff;
-          padding: 3px;
+          color: $primary;
+          padding: 2px;
           transition: background-color 0.2s ease;
           border-radius: 4px;
           outline: none;
