--- a/src/Style/Layout/Checkout/checkout.scss
+++ b/src/Style/Layout/Checkout/checkout.scss
@@ -26,7 +26,7 @@
       }
       .btnLogin {
         .imgLogin {
-          background-image: url("../../../Assets/img/avatar.png");
+          // background-image: url("../../../Assets/img/avatar.png");
           @include BGI(center, cover, 30px, 30px);
           border-radius: 50%;
           margin-right: 10px;
