--- a/src/App.scss
+++ b/src/App.scss
@@ -11,5 +11,6 @@
 @import "./Style/Layout/Detail/Detail.scss";
 @import "./Style/Layout/Checkout/checkout.scss";
 @import "./Style/Layout/Login/login.scss";
+@import "./Style/Layout/Register/register.scss";
 
 @import "./Style/Layout/Footer/Footer.scss";
