--- a/src/Style/Layout/Login/login.scss
+++ b/src/Style/Layout/Login/login.scss
@@ -41,7 +41,8 @@
           margin-top: $mrt - 15;
         }
       }
-      .signin__close {
+      .register__user {
+        font-size: $body1;
       }
     }
   }
