--- a/src/App.scss
+++ b/src/App.scss
@@ -12,5 +12,6 @@
 @import "./Style/Layout/Checkout/checkout.scss";
 @import "./Style/Layout/Login/login.scss";
 @import "./Style/Layout/Register/register.scss";
+@import "./Style/Layout/Profile/Profile.scss";
 
 @import "./Style/Layout/Footer/Footer.scss";
