--- a/src/Style/Layout/Checkout/checkout.scss
+++ b/src/Style/Layout/Checkout/checkout.scss
@@ -25,14 +25,17 @@
         width: 100%;
       }
       .btnLogin {
+        .header__user {
+          color: $cGray;
+          font-size: $body1;
+        }
+
         .imgLogin {
           // background-image: url("../../../Assets/img/avatar.png");
           @include BGI(center, cover, 30px, 30px);
           border-radius: 50%;
           margin-right: 10px;
         }
-        color: $cGray;
-        font-size: $body1;
       }
     }
   }
