--- a/src/App.scss
+++ b/src/App.scss
@@ -13,5 +13,6 @@
 @import "./Style/Layout/Login/login.scss";
 @import "./Style/Layout/Register/register.scss";
 @import "./Style/Layout/Profile/Profile.scss";
+@import "./Style/Layout/Admin/Admin.scss";
 
 @import "./Style/Layout/Footer/Footer.scss";
