--- a/src/Style/Layout/Admin/Admin.scss
+++ b/src/Style/Layout/Admin/Admin.scss
@@ -16,7 +16,7 @@
     transition: all 0.2s;
     margin-top: 25px;
     margin-bottom: 20px;
-    background-color: #fb4226;
+    background-color: #00ac4d;
     border: none;
     color: #fff;
   }
