--- a/src/Style/Layout/Admin/Admin.scss
+++ b/src/Style/Layout/Admin/Admin.scss
@@ -59,4 +59,12 @@
   .modal-dialog {
     max-width: 1000px !important;
   }
+  .plist__admin{
+    .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+     background-color: $cRed;
+    }
+    a{
+      color: $primary;
+    }
+  }
 }
